--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ManoDelArtesanoGestionTurnosPrincipal">
         <activity
-            android:name=".CrearAtraccion"
-            android:exported="false" />
+            android:name=".DetallesAtraccion"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
+
         <activity
-            android:name=".GuiaActivity"
+            android:name=".CrearAtraccion"
             android:exported="false" />
         <activity
             android:name=".SubirTextoFirebase"
             android:exported="false" />
         <activity
             android:name=".SubirVideoFirebase"
-            android:exported="false" />
-        <activity
-            android:name=".GestionarTurnos"
             android:exported="false" />
         <activity
             android:name=".GestionAppTV"
